# cogext

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  requirements.txt
app/: main.py
app/api/: ingest.py  recall.py  status.py
app/core/: extractor.py  lifecycle.py  scorer.py
app/db/: connection.py  row_helpers.py
app/llm/: provider.py
app/models/: commitment.py
app/tests/: conftest.py  test_api_ingest.py  test_api_recall.py  test_api_status.py  test_extractor.py  test_lifecycle.py  test_scorer.py
scripts/: test.sh
sdk/: README.md  pyproject.toml
sdk/cogext/: __init__.py  client.py  exceptions.py  tracker.py
sdk/examples/: quickstart.py
sdk/tests/: test_smoke.py
