[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cogext"
version = "0.1.0"
description = "Python SDK for the COGEXT commitment tracking backend"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["cogext"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
